<resources>
    <string name="app_name">project_one</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="instructions">Instructions</string>
    <string name="person_icon">person icon</string>
    <string name="email_icon">email icon</string>
    <string name="password_icon">password icon</string>
    <string name="next_icon">next icon</string>
    <string name="instruction_list">A) Adding a new order.\n\n1-Click on the floating button on the bottom right to add an order.\n2-Select the appropriate choices for the order.\n3-Choose to share, save, or cancel the order.\n\nB) Previewing or sharing or editing an old order.\n\n1-Click on an old order to preview it.\n2-Choose to share or edit the order.\n\nC) Side menu.\n\n-Access the order list.\n-View instructions.\n-Learn more about the application.</string>
    <string name="next_button">next button</string>
    <string name="order_list">order list</string>
    <string name="add_floating_button">add floating button</string>
    <string name="the_app_description_1">Introducing our Italian Shoe App:\n\nExperience the essence of Italian craftsmanship with our exclusive shoe app, featuring four renowned brands: Tod s, Santoni, Gucci, and Prada.</string>
    <string name="app_description_2">Our app allows you to effortlessly place customized orders, tailoring each purchase to your preferences. Select the desired age range, shoe type, brand, and more, creating a personalized order that suits your style.\n\nAfter submitting your order through the app, our company will promptly respond via email to confirm your order details. We will keep you updated throughout the process, notifying you when your order is ready for delivery.</string>
    <string name="app_description_3">\n\nAt each step of the way, we prioritize clear and efficient communication to ensure a seamless experience for our valued customers. Rest assured that our dedicated team will handle your order with the utmost care and attention to detail.\n\nStay tuned for our email notification, which will provide you with the necessary information regarding the status of your order.</string>
    <string name="app_description_4"> We appreciate your trust in our app and look forward to serving you with exceptional Italian shoe craftsmanship.\n\nIndulge in the world of Italian shoes with our app and discover the perfect pair that embodies elegance, quality, and sophistication.</string>
    <string name="about">About</string>
    <string name="preview">preview</string>
    <string name="Login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="one_hundred_description">image with one 100% satisfaction guaranteed</string>
    <string name="grass_shoe_description">old shoe that some grass grown inside it</string>
    <string name="welcome">Welcome</string>
    <string name="slogan_S">You are not buying an object,\n you are buying a style</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="brand">Brand :</string>
    <string name="gucci">Gucci</string>
    <string name="prada">Prada</string>
    <string name="tod_s">Tod\'s</string>
    <string name="type">Type :</string>
    <string name="santoni">Santoni</string>
    <string name="sports">Sports</string>
    <string name="work">Work</string>
    <string name="casual">Casual</string>
    <string name="formal">Formal</string>
    <string name="material">Material :</string>
    <string name="leather">Leather</string>
    <string name="rubber">Rubber</string>
    <string name="foam">Foam</string>
    <string name="plastic">Plastic</string>
    <string name="size">Size :</string>
    <string name="enter_shoe_size">Enter Shoe Size</string>
    <string name="color">Color :</string>
    <string name="enter_shoe_color">Enter Shoe Color</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="instruction">Instruction</string>
    <string name="order_name">Order Name : </string>
    <string name="enter_order_name">Enter Order Name</string>
    <string name="order_one">Order #One</string>
    <string name="made">"Made : "</string>

</resources>