<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    tools:context=".Login">
    <!-- here i used the constraint layout because to give the design more beauty when rotate the phone-->

    <data>

        <variable
            name="shared"
            type="com.test_one.project_one.SharedViewModel" />

    </data>

    <ScrollView
        android:id="@+id/login_SV"
        style="@style/scrollview_normal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_CL"
            style="@style/constraint_normal">

            <TextView
                android:id="@+id/User_Name_TV"
                style="@style/italian_text_icon"
                android:text="@string/user_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/user_icon_IV"
                style="@style/icon"
                android:contentDescription="@string/person_icon"
                android:src="@drawable/user_icon"
                app:layout_constraintBottom_toBottomOf="@+id/user_name_ETV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_name_ETV" />

            <EditText
                android:id="@+id/user_name_ETV"
                style="@style/edittext_normal"
                android:hint="@string/enter_your_name"
                android:inputType="text"

                android:textColorHint="#A1887F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/user_icon_IV"
                app:layout_constraintTop_toBottomOf="@+id/User_Name_TV" />

            <TextView
                android:id="@+id/email_TV"
                style="@style/italian_text_icon"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_icon_IV" />

            <ImageView
                android:id="@+id/email_icon_IV"
                style="@style/icon"
                android:contentDescription="@string/email_icon"
                android:src="@drawable/email_icon"
                app:layout_constraintBottom_toBottomOf="@+id/email_ETV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/email_ETV" />

            <EditText
                android:id="@+id/email_ETV"
                style="@style/edittext_normal"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#A1887F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/email_icon_IV"
                app:layout_constraintTop_toBottomOf="@+id/email_TV" />

            <TextView
                android:id="@+id/password_TV"
                style="@style/italian_text_icon"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_icon_IV" />

            <ImageView
                android:id="@+id/password_IV"
                style="@style/icon"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/lock_icon"
                app:layout_constraintBottom_toBottomOf="@+id/password_ETV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/password_ETV" />

            <EditText
                android:id="@+id/password_ETV"
                style="@style/edittext_normal"
                android:hint="@string/enter_your_password"
                android:inputType="text|textPassword"
                android:textColorHint="#A1887F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/password_IV"
                app:layout_constraintTop_toBottomOf="@+id/password_TV" />

            <Button
                android:id="@+id/login_B"
                style="@style/button_normal"
                android:text="@string/Login"
                app:cornerRadius="@dimen/corner_button"
                app:layout_constraintEnd_toStartOf="@+id/sign_in_B"
                app:layout_constraintStart_toStartOf="@+id/password_IV"
                app:layout_constraintTop_toBottomOf="@+id/password_ETV" />

            <Button
                android:id="@+id/sign_in_B"
                style="@style/button_normal"
                android:layout_marginEnd="0dp"
                android:text="@string/sign_in"
                app:cornerRadius="@dimen/corner_button"
                app:layout_constraintEnd_toEndOf="@+id/password_ETV"
                app:layout_constraintStart_toEndOf="@+id/login_B"
                app:layout_constraintTop_toBottomOf="@+id/password_ETV" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>